syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service SecurityLogin{
	rpc GetSecurityLogin(SecurityLoginIdRequest) returns (SecurityLoginReply);
	rpc GetAllSecurityLogin(google.protobuf.Empty) returns (SecurityLoginList);
	rpc AddSecurityLogin(SecurityLoginList) returns (google.protobuf.Empty);
	rpc UpdateSecurityLogin(SecurityLoginList) returns (google.protobuf.Empty);
	rpc DeleteSecurityLogin(SecurityLoginList) returns (google.protobuf.Empty);
}

message SecurityLoginIdRequest{
	string Id = 1;
}

message SecurityLoginReply{
	string Id = 1;
	string Login = 2;
	string Password = 3;
	google.protobuf.Timestamp Created = 4;
	google.protobuf.Timestamp PasswordUpdate = 5;
	google.protobuf.Timestamp AgreementAccepted = 6;
	bool IsLocked = 7;
	bool IsInactive = 8;
	string EmailAddress = 9;
	string PhoneNumber = 10;
	string FullName = 11;
	bool ForceChangePassword = 12;
	string PrefferredLanguage = 13;
	bytes TimeStamp = 14;
}

message SecurityLoginList{
	repeated SecurityLoginReply SecurityLogins = 1;
}